fix overflow for tabs

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  overflow-y: hidden;
+  overflow-x: hidden;
   color: white;
   width: 100dvw;
   overflow-x: hidden;
